# shadowcut

./: README.md
backend/: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  clean.py  justfile  main.py  plot_dependencies_data.py  pyproject.toml  settings.py
backend/adapters/: identity_provider.py
backend/adapters/alembic/: env.py  script.py.mako
backend/adapters/alembic/versions/: e0a42bc0b514_initial.py
backend/adapters/datamappers/: shortcut.py
backend/adapters/models/: shortcut.py
backend/adapters/repositories/: base.py  shortcut.py
backend/domain/cases/: base.py  create_shortcut.py  get_all_shortcuts.py  get_shortcut_by_pk.py
backend/domain/entities/: shortcut.py
backend/domain/enums/: role.py
backend/domain/exceptions/: shortcut_not_found.py
backend/domain/ports/: committer.py  identity_provider.py  shortcut_repository.py
backend/presentation/: depends_token.py  main.py  schemas.py
backend/setup/: ioc.py
backend/setup/providers/: auth.py  main.py  persistence.py
backend/tests/logic/: test_create_shortcut.py  test_get_all_shortcuts.py  test_get_shortcut_by_pk.py
backend/tests/mocks/: committer.py  identity_provider.py
backend/tests/mocks/repositories/: base.py  shortcut.py
